--- a/web-customer-tracker/WebContent/resources/css/style.css
+++ b/web-customer-tracker/WebContent/resources/css/style.css
@@ -13,7 +13,7 @@ table {
  
 th {
 	border-bottom:1px solid gray;
-	background:none repeat scroll 0 0 #09c332;
+	background:none repeat scroll 0 0 #E8806A;
 	padding:10px;
 	color: #FFFFFF;
 }
@@ -24,10 +24,10 @@ tr {
 }
  
 tr:nth-child(even) {background: #FFFFFF}
-tr:nth-child(odd) {background: #BBBBBB}	
+tr:nth-child(odd) {background: #EDA291}	
  
 #wrapper {width: 100%; margin-top: 0px; }
-#header {width: 70%; background: #09c332; margin-top: 0px; padding:15px 0px 15px 15px;}
+#header {width: 70%; background: #E17E69 ; margin-top: 0px; padding:15px 0px 15px 15px;}
 #header h2 {width: 100%; margin:auto; color: #FFFFFF;}
 #container {width: 100%; margin:auto}
 #container h3 {color: #000;}
@@ -41,7 +41,6 @@ tr:nth-child(odd) {background: #BBBBBB}
 	font-weight: bold;
 	width: 120px; 
 	padding: 5px 10px; 
-	
 	margin-bottom: 15px;
-	background: #cccccc;
+	background: #E7D8D5 ;
 }
